Fixed position seems to be working on mobile, athough had to display none the right one;

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,23 +1,24 @@
 div.page{
-  width: 96vw;
-  overflow: hidden;
   position: absolute;
+  width: 100vw;
 }
 
 .page-first{
-    background-color: green;
+  background-color: green;
+
 }
 
 .page-second{
   background-color: red;
+  display: none;
   left: 100%;
 }
 
 span.page-content{
+  position: relative;
+  top: 50%;
+  left:50%;
   font-size: 300%;
   font-weight: bold;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50% -50%);
 }
